--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,11 +1,14 @@
 <%= simple_form_for @cocktail do |f| %>
-  <%= f.error_notification %>
-
-   <div class="form-inputs">
+  <div>
+    <%= f.error_notification %>
     <%= f.input :name %>
   </div>
-
- <div class="form-actions">
-  <%= f.button :submit %>
-</div>
+<!--
+  <div>
+    <%# render 'form', dose: @dose %>
+  </div>
+ -->
+  <div>
+    <%= f.button :submit %>
+  </div>
 <% end %>
