--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,9 +1,17 @@
-<h1>Cocktail of your choice</h1>
-<h2><%= @cocktail.name %></h2>
-
-<h3>ingredients :</h3>
+<h1><%= @cocktail.name %></h1>
 <ul>
-  <% @cocktail.ingredients.each do |ingredient| %>
-    <li> <%= ingredient.name %> </li>
+  <% @cocktail.doses.each do |dose| %>
+    <li>
+      <%= dose.description %> - (<%= dose.ingredient.name %>)
+      <span class="btn btn-danger">
+        <%= link_to "delete", dose_path(dose),
+          method: :delete,
+          data: { confirm: "Are you sure?" } %>
+      </span>
+    </li>
   <% end %>
 </ul>
+
+<div>
+  <%= render 'doses/form', dose: @dose %>
+</div>
