--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,19 +1,25 @@
-<h1>Here is our cocktail list</h1>
+<div class="banner"
+style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('');">
+  <div class="banner-content">
+    <h1>Here is our cocktail list</h1>
 
-<div class="container">
-  <div>
-    <ul>
-      <% @cocktails.each do |cocktail| %>
-      <%= link_to cocktail_path(cocktail), class:"btn btn-primary" do %>
-      <li><%= cocktail.name %></li>
-      <% end %>
-    <% end %>
+      <div class="container">
+        <div>
+          <ul>
+            <% @cocktails.each do |cocktail| %>
+            <%= link_to cocktail_path(cocktail), class:"btn btn-primary" do %>
+            <li><%= cocktail.name %></li>
+            <% end %>
+          <% end %>
 
-    </ul>
-  </div>
-  <div>
-    <%= link_to new_cocktail_path, class:"btn btn-danger" do %>
-        <div class = "text-center" > Add a new cocktail</div>
-    <% end %>
+          </ul>
+        </div>
+        <div>
+          <%= link_to new_cocktail_path, class:"btn btn-danger" do %>
+              <div class = "text-center" > Add a new cocktail</div>
+          <% end %>
+        </div>
+      </div>
+
   </div>
 </div>
