--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -7,13 +7,18 @@ style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0
         <div>
           <ul>
             <% @cocktails.each do |cocktail| %>
-            <%= link_to cocktail_path(cocktail), class:"btn btn-primary" do %>
-            <li><%= cocktail.name %></li>
+              <li>
+                <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cocktail.photo.url.nil? ? image_path("anne.jpg") : cl_image_path(cocktail.photo, height: 300, width: 400, crop: :fill) %>')">
+                  <div class="card-category">Popular</div>
+                  <div class="card-description">
+                    <h2><%= cocktail.name %></h2>
+                    <p>Very cool stuff, useful and smart</p>
+                  </div>
+                  <%= link_to '', cocktail_path(cocktail), class: "card-link" %>
+                </div>
+              </li>
             <% end %>
-          <% end %>
-
           </ul>
-        </div>
         <div>
           <%= link_to new_cocktail_path, class:"btn btn-danger" do %>
               <div class = "text-center" > Add a new cocktail</div>
