--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -10,6 +10,7 @@
       </span>
     </li>
   <% end %>
+  <%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
 </ul>
 
 <div>
